<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/colorBaseBg"
        >
        <EditText
            android:id="@+id/editsearchText"
            android:layout_marginStart="4dp"
            android:layout_width="0dp"
            android:hint="Search"
            android:textColorHint="#FFFFFF"
            android:visibility="gone"
            android:textColor="#FFFFFF"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            />
        <requestFocus/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"/>
    </LinearLayout>

<FrameLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerId"
        android:background="@color/colorBaseBg"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_width="match_parent"
        tools:listitem="@layout/movie_item"
        android:layout_height="match_parent"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"/>
</FrameLayout>
</LinearLayout>
</layout>