<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="myMovie"
            type="com.example.movieapp.model.database.Result" />
    </data>
    <LinearLayout
        android:id="@+id/movie_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#000000"
                >
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:src="@drawable/banner33_2x"
                    android:scaleType="fitXY"
                    />
                <ImageView
                    android:id="@+id/ImageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:textSize="@dimen/songs_count" />
                <ImageView
                    android:id="@+id/ImageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_favorite_black_24dp"
                    android:textSize="@dimen/songs_count" />
<!--                <CheckBox-->
<!--                    android:id="@+id/likeIcon"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:button="@null"-->
<!--                    android:checked="false" -->
<!--                    android:stateListAnimator="@animator/scale"-->
<!--                    android:background="@drawable/like"-->
<!--                />-->

                <TextView
                    android:id="@+id/textView"
                    android:text="@{myMovie.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:text="@{myMovie.releaseDate}"
                    android:textColor="@color/colorPrimary"
                    android:paddingBottom="@dimen/songs_count_padding_bottom"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:textSize="@dimen/songs_count" />
                <RatingBar
                    android:id="@+id/move_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:layout_margin="4dp"
                    android:progressBackgroundTint="@android:color/white"
                    style="@android:style/Widget.Holo.RatingBar.Small"
                    android:progressTint="@color/colorAccent"
                    tools:rating="1"
                    android:stepSize="0.5"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:textColor="@color/colorPrimary"
                    android:paddingBottom="@dimen/songs_count_padding_bottom"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:textSize="@dimen/songs_count" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>